result/HTML/doc2.htm.err
./test/HTML/doc2.htm:5: error: Misplaced DOCTYPE declaration
<!-- END Naviscope Javascript --><!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Tr
                                 ^
